--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ PORT=3000
 # MONGODB
 MONGOUSER=marvenferry60
 MONGOPASSWORD=8Ujld4FCQmfpqwGqpUtX
+
+# SECRET KEY
+SECRET_KEY=EstoEsunaLlaveMuysecreta@
