--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "joi": "^17.13.3",
     "joy": "^0.1.1",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
