--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ MONGOPASSWORD=8Ujld4FCQmfpqwGqpUtX
 
 # SECRET KEY
 SECRET_KEY=EstoEsunaLlaveMuysecreta@
+
+#EMAIL
+EMAIL_USER=thora.sawayn@ethereal.email
+EMAIL_PASSWORD=bWUf6Atvzd55JrkTvn
