--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ SECRET_KEY=EstoEsunaLlaveMuysecreta@
 #EMAIL
 EMAIL_USER=thora.sawayn@ethereal.email
 EMAIL_PASSWORD=bWUf6Atvzd55JrkTvn
+
+#SECRET KEY
+SECRET_KEY=ahPhZ7FIr9INoCN60lBMf4rOd0o
